trying to solve overflow issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,10 @@
 html {
   scrollbar-width: none;
   scroll-behavior: smooth;
-  overflow-x: hidden;
   /* user-select: none; */
+}
+
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
